# Accurate-Large-Scale-Ferrofluids

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  vcpkg.json
src/: main.cpp  original.h  reconstruction.cpp  reconstruction.h  simulation.cpp  simulation.h
